Revert "Allocator: nfs client as extra container (#1089)"
This reverts commit fa1dda695989fdf68f6418cafa242847fa295151.